# legible_font

./: Cargo.toml  README.md
min_res/: Cargo.toml
min_res/benches/: benchmarks.rs
min_res/src/: base_boards.rs  main.rs
src/: main.rs
test_data/: boards.txt
upscale/: Cargo.toml  pyproject.toml
upscale/src/: main.py  main.rs  min_res.py  tests.py
