[package]
name = "legible_font_upscale"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.2"
rand = "0.8"
tokio = { version = "1.16.1", features = ["full"] }
safetensors = "0.5"
tempfile = "3.15"
image = "0.25"
